src/styles/DarkPalette.css
@custom-variant dark (&:where(.dark, .dark *));
@layer base {
    @variant dark {
        --color-base: #222222;
        --color-text: #808080;
        --color-onyx: #3a3d41;
        --color-gray: #808080;
        --color-silver: #C8C8C8;
        --color-winter: #9CDCFE;
        --color-picton-blue: #4FC1FF;
        --color-carolina: #569CD6;
        --color-cornflower: #6796E6;
        --color-true-blue: #0078d4;
        --color-navy-blue: #000080;
        --color-pine-green: #16825d;
        --color-may-green: #369432;
        --color-russian-green: #6A9955;
        --color-eucalyptus: #4EC9B0;
        --color-moss-green: #B5CEA8;
        --color-c-and-c: #DCDCAA;
        --color-burlywood: #D7BA7D;
        --color-sheen-gold: #CD9731;
        --color-antique-brass: #CE9178;
        --color-watermelon: #D16969;
        --color-tart-orange: #F44747;
        --color-lilac: #B267E6;
        --color-violet: #C586C0;
        --color-blue-gray: #646695;
    }
}

/* TODO: send this to Light palette */
@theme {
    --color-base: #fff;
    --color-onyx: #fff;
    --color-gray: #fff;
    --color-silver: #fff;
    --color-winter: #fff;
    --color-picton-blue: #fff;
    --color-carolina: #fff;
    --color-cornflower: #fff;
    --color-true-blue: #fff;
    --color-navy-blue: #fff;
    --color-pine-green: #fff;
    --color-may-green: #fff;
    --color-russian-green: #fff;
    --color-eucalyptus: #fff;
    --color-moss-green: #fff;
    --color-c-and-c: #fff;
    --color-burlywood: #fff;
    --color-sheen-gold: #fff;
    --color-antique-brass: #fff;
    --color-watermelon: #fff;
    --color-tart-orange: #fff;
    --color-lilac: #fff;
    --color-violet: #fff;
    --color-blue-gray: #fff;
    }

